# vigilai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
examples/: basic_tracing.py  reliable_agent.py  security_scan.py
tests/: __init__.py  test_observability.py  test_reliability.py  test_security.py
vigilai/: __init__.py
vigilai/core/: __init__.py  exceptions.py  inspector.py
vigilai/observability/: __init__.py  cost_tracker.py  otel_exporter.py  token_counter.py  tracer.py
vigilai/reliability/: __init__.py  fallback.py  loop_guard.py  retry.py
vigilai/security/: __init__.py  injection_scanner.py  output_guard.py  pii_scanner.py  secret_scanner.py
vigilai/utils/: __init__.py  logger.py
